feat(api-ub): :sparkles: add collection search paginated api
